Docs: README.md update regarding unfixed checkbox layout bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -456,7 +456,6 @@ nav ul li {
 
 #contact-form li {
     list-style: none;
-    display: inline-block;
 }
 
 .checkbox {
@@ -737,10 +736,6 @@ footer p {
 
     #contact-image {
         width: 0%;
-    }
-
-    #contact-form li {
-        display: block;
     }
 
     .checkbox {
